k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: totally-real-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: totally-real-multi-cloud-payments-client-service  
            servicePort: 8080
